--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -10,5 +10,7 @@
   "nav_user_title": "用户",
   "nav_project_title": "项目",
   "nav_home_title": "首页",
-  "nav_trend_title": "动态"
+  "nav_trend_title": "动态",
+
+  "nav_login": "登录"
 }
