--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -14,7 +14,7 @@
 
   "homeRecommendedArticle": "Recommended Article",
 
-  "loginAppBarTitle": "Login",
+  "loginAppBarTitle": "QiYang",
   "loginNicknameInputTitle": "nickname",
   "loginPasswordInputTitle": "password",
   "loginBtnText": "login",
