--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -19,7 +19,7 @@
 
   "homeRecommendedArticle": "推荐文章",
 
-  "loginAppBarTitle": "QiYang",
+  "loginAppBarTitle": "qi_yang",
   "loginNicknameInputTitle": "账号",
   "loginPasswordInputTitle": "密码",
   "loginBtnText": "登录",
